Fixed g++ warnings. There still remains a few warning about uninitialised variables using g++ 4.4, I think it is the same false positive as http://gcc.gnu.org/bugzilla/show_bug.cgi?id=40146